# RP-X-temp

./: .gitignore  .gitmodules  banner_color_picker.py  setup.bat  setup.py  start-rpx.bat
.claude/: settings.local.json
Gemma/modules/: game_launcher.py  network.py  omniparser_client.py  simple_automation.py
docs/: README.md
docs/future-plans/: architectural-shift-3.md  self-update-system.md  ui-animations.md
docs/knowledge-base/: architecture-learnings.md  restarter-learnings.md
docs/plans/: README.md  rpx-frontend-control-center.md  rpx-preset-manager-integration.md  rpx-roadmap-2025.md  service-manager-dashboard-omniparser.md  service-manager-gui-initial.md  steam-account-pool-and-ocr-config.md
rpx-core/: README.md  added_simple_automation.py  gui_app.py  gui_app_multi_sut.py  main.py  pyproject.toml  rpx_sut_service.py  workflow_builder.py
rpx-core/admin/: index.html  package.json
rpx-core/backend/: __init__.py  main.py
rpx-core/modules/: annotator.py  decision_engine.py  decision_engine_legacy.py  decision_engine_legacy1.py  discovery_client.py  network.py  omniparser_client.py  preset_manager_client.py  qwen_client.py  (+3 more)
service_manager/: pyproject.toml
service_manager/src/service_manager/: __init__.py  config.py  main.py  settings.py
service_manager/src/service_manager/services/: process_manager.py
service_manager/src/service_manager/ui/: flow_diagram.py  main_window.py  service_tab_bar.py  settings_dialog.py  setup_wizard.py
service_manager/src/service_manager/update/: update_manager.py
sut_client/: pyproject.toml  restarter.bat
(+125 files in other folders)
