[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpx-service-manager"
version = "1.0.0"
description = "GUI application to manage all Raptor X services"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
]

[project.scripts]
rpx-manager-cli = "service_manager:main"

[project.gui-scripts]
rpx-manager = "service_manager:main"

[tool.hatch.build.targets.wheel]
packages = ["src/service_manager"]
